// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voicePitchRange renders 0 1`] = `
Array [
  .c0 {
  voice-pitch-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders function 1`] = `
Array [
  .c0 {
  voice-pitch-range: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders negative number 1`] = `
Array [
  .c0 {
  voice-pitch-range: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch-range: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch-range: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch-range: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-pitch-range: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-pitch-range: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    voice-pitch-range: July;
  }
}

@media April {
  .c0 {
    voice-pitch-range: August;
  }
}

@media January {
  .c0 {
    voice-pitch-range: September;
  }
}

@media April {
  .c0 {
    voice-pitch-range: November;
  }
}

@media June {
  .c0 {
    voice-pitch-range: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-pitch-range: July;
  }
}

@media April {
  .c0 {
    voice-pitch-range: August;
  }
}

@media January {
  .c0 {
    voice-pitch-range: September;
  }
}

@media April {
  .c0 {
    voice-pitch-range: November;
  }
}

@media June {
  .c0 {
    voice-pitch-range: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-pitch-range: January;
  }
}

@media April {
  .c0 {
    voice-pitch-range: December;
  }
}

@media January {
  .c0 {
    voice-pitch-range: April;
  }
}

@media April {
  .c0 {
    voice-pitch-range: May;
  }
}

@media June {
  .c0 {
    voice-pitch-range: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-pitch-range: January;
  }
}

@media April {
  .c0 {
    voice-pitch-range: December;
  }
}

@media January {
  .c0 {
    voice-pitch-range: April;
  }
}

@media April {
  .c0 {
    voice-pitch-range: May;
  }
}

@media June {
  .c0 {
    voice-pitch-range: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders postitive number 1`] = `
Array [
  .c0 {
  voice-pitch-range: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders string 1`] = `
Array [
  .c0 {
  voice-pitch-range: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voicePitchRange renders valid theme path 1`] = `
Array [
  .c0 {
  voice-pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
